--- a/design.css
+++ b/design.css
@@ -1,45 +1,143 @@
-.nav-style{
+.nav-style {
     font-family: Ubuntu, sans-serif;
     font-weight: bold;
-    font-size :15px;
-    color:#A40022; 
+    font-size: 15px;
+    color: #A40022;
 }
-.timeline{
+
+.timeline {
     content: none;
     border-color: grey;
     background-color: white;
-    width:2px;
+    width: 2px;
 }
 
-.hoveffect:hover{
-    color:white;
-    background-color:#A40022 ;
+.hoveffect:hover {
+    color: white;
+    background-color: #A40022;
     border-radius: 5px;
 }
-.hoveffect:active, .hoveffect:focus{
-    color:white;
-    background-color:#A40022 ;
+
+.hoveffect:active,
+.hoveffect:focus {
+    color: white;
+    background-color: #A40022;
     border-radius: 5px;
 
 }
 
-.msg{
+.msg {
     text-align: center;
-    padding:5px;
+    padding: 5px;
     margin-left: 200px;
     border-color: #A40022;
     border-radius: 2px;
     background-color: #A40022;
-    color:antiquewhite;
+    color: antiquewhite;
 }
-.msg:hover{
+
+.msg:hover {
     background-color: blanchedalmond;
-    color:#A40022;
+    color: #A40022;
 
 }
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover{
-    color: red !important;
-    background-color: white;
+
+.navbar a.nav-link.active {
+    background-color: #A40022;
+    color: antiquewhite !important;
 }
+
+.content-1 {
+    animation: extend 1s;
+    animation-iteration-count: 1;
+    background-color: #DD9FAC;
     
+    
+    
+    margin: 8px;
+
+}
+
+@keyframes extend {
+    25% {
+        transform: translate(1px, 1px);
+    }
+
+    50% {
+        transform: translate(1px, 1px);
+    }
+
+    75% {
+        transform: translate(1px, 1px);
+    }
+
+    100% {
+        transform: translate(1px, 1px);
+    }
+
+}
+
+.main {
+    background-color: #A40022;
+    color: aliceblue;
+}
+
+.icon-bar {
+    position: fixed;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  
+
+.icon-bar a {
+    display: block;
+    text-align: center;
+    padding: 16px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 20px;
+    border-radius: 3px;
+}
+.icon-bar a:hover {
+    background-color: #000;
+}
+
+
+
+/* Make sure that padding behaves as expected */
+* {box-sizing:border-box}
+
+/* Container for skill bars */
+.container {
+  width: 50%; /* Full width */
+  background-color: white;
+  border-radius: 4px;
+  border-color: grey;
+  height:7px; /* Grey background */
+  margin-bottom: 10px;
+  margin-top:10px;
+
+
+}
+
+
+.skills {
+  text-align: right; /*Right-align text */
+  /* padding-top: 10px; Add top padding */
+  /* padding-bottom: 10px; Add bottom padding */
+  color: white; /* White text color */
+  margin-left:-11px;
+  background-color: #A40022;
+  border-radius: 4px;
+  height:7px;
+}
+
+.html {width: 65%;} /* Green */
+.css {width: 65%;} /* Blue */
+.js {width: 65%;} /* Red */
+.py {width: 80%;} /* Dark Grey */
+.xls {width: 80%;} /* Dark Grey */
+.rp {width: 55%;} /* Dark Grey */
