--- a/design.css
+++ b/design.css
@@ -1,15 +1,17 @@
-.nav-style {
-    font-family: Ubuntu, sans-serif;
-    font-weight: bold;
-    font-size: 15px;
-    color: #A40022;
-}
+
 
 .timeline {
     content: none;
     border-color: grey;
     background-color: white;
     width: 2px;
+}
+/* navbar design start */
+.nav-style {
+    font-family: Ubuntu, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    color: #A40022;
 }
 
 .hoveffect:hover {
@@ -26,6 +28,14 @@
 
 }
 
+.navbar a.nav-link.active {
+    background-color: #A40022;
+    color: antiquewhite !important;
+}
+/* navbar design end */
+
+/* send me a message start */
+
 .msg {
     text-align: center;
     padding: 5px;
@@ -41,54 +51,38 @@
     color: #A40022;
 
 }
+.tick{
+    color:white;
+    text-shadow:white;
+    background-color:#A40022 !important;
+    transition: all 0.3s ease;
 
-
-.navbar a.nav-link.active {
-    background-color: #A40022;
-    color: antiquewhite !important;
 }
+
+
+/* end of send a msg */
 
 .content-1 {
     animation: extend 1s;
     animation-iteration-count: 1;
     background-color: #DD9FAC;
-    
-    
-    
+    border-bottom-width: 1px;
+    border-bottom-color: grey;
     margin: 8px;
-
-}
-
-@keyframes extend {
-    25% {
-        transform: translate(1px, 1px);
-    }
-
-    50% {
-        transform: translate(1px, 1px);
-    }
-
-    75% {
-        transform: translate(1px, 1px);
-    }
-
-    100% {
-        transform: translate(1px, 1px);
-    }
-
 }
 
 .main {
     background-color: #A40022;
     color: aliceblue;
 }
-
+/* side bar start */
 .icon-bar {
     position: fixed;
     top: 50%;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+    
     
   }
   
@@ -100,15 +94,19 @@
     transition: all 0.3s ease;
     color: white;
     font-size: 20px;
-    border-radius: 3px;
+    border-radius: 50%;
+    text-shadow:#000;
+    
 }
 .icon-bar a:hover {
     background-color: #000;
+
 }
+/* side bar end */
 
 
 
-/* Make sure that padding behaves as expected */
+/* skills are */
 * {box-sizing:border-box}
 
 /* Container for skill bars */
@@ -142,3 +140,5 @@
 .py {width: 80%;} /* Dark Grey */
 .xls {width: 80%;} /* Dark Grey */
 .rp {width: 55%;} /* Dark Grey */
+
+/* skills design ends */
