--- a/design.css
+++ b/design.css
@@ -13,20 +13,16 @@
      /* for collapsing header */
 }
 #name_pic{
-    height:200px;
-    width:300px;
+    height:90%;
+    width:100%;
     overflow: hidden;
-    margin-top: 5px;
-    
-    
-   
+    margin-top: 5px; 
 }
 #pic{
     justify-self: center;
     align-self: center;
     width:280px;
     height:280px;
-    border-radius: 50%;
     margin-right:-2px;
 }
 .resume{
@@ -36,23 +32,46 @@
     background-color: #702670;
 }
 
-body,.txt {
-    font-family: Lora, serif;
-    font-size: 16px;
-    font-weight: bold;
+p{
+    font-family: 'Prompt', sans-serif;
 }
 
+/* education design */
+
+.edu{
+    background-color:3c3b3e3;
+    border-radius:5px;
+    padding: 3px;
+
+}
+.edu-one{
+    border-top:5px dotted #301934;
+    border-right:5px dotted #301934; 
+    text-align:center;  
+}
+.edu-two{
+    border-bottom:5px dotted #301934;
+    border-right:5px dotted #301934; 
+    border-bottom-left-radius: 2px;   
+}   
+
+.edu-three{
+    border-top:5px dotted #301934;
+    border-right:5px dotted #301934;
+}
+
+.yr{
+    background-color: #301934;
+    font-size:15px;
+    
+    
+}
 
 h4,.h {
     font-family: Ubuntu, sans-serif;
-    font-size: 46px;
+    font-size: 32px;
 }
-.timeline {
-    content: none;
-    border-color: grey;
-    background-color: white;
-    width: 2px;
-}
+
 /* navbar design start */
 .nav-style {
     font-family: Ubuntu, sans-serif;
@@ -63,19 +82,18 @@ h4,.h {
 
 .hoveffect:hover {
     color: white;
-    background-color:#301934; 
-    border-radius: 10px;
+    background-color:#702670; 
 }
 
 .hoveffect:active,
 .hoveffect:focus {
     color: white;
-    background-color:#301934;
-    border-radius: 10px;
+    background-color:#702670;
+    
 
 }
 .navbar a.nav-link.active {
-    background-color:#301934;
+    background-color:#702670;
     color: white !important;
 }
 /* navbar design end */
@@ -86,7 +104,6 @@ h4,.h {
     text-align: center;
     margin-left: 200px;
     border-color: #A40022;
-    border-radius: 10px;
     background-color: #A40022;
     color: antiquewhite;
 }
@@ -107,19 +124,9 @@ h4,.h {
 
 /* end of send a msg */
 
-.content-1 {
-    animation: extend 1s;
-    animation-iteration-count: 1;
-    background-color: #DD9FAC;
-    border-bottom-width: 1px;
-    border-bottom-color: grey;
-    margin: 8px;
-}
 
-.main {
-    background-color: #A40022;
-    color: aliceblue;
-}
+
+
 /* side bar start */
 .icon-bar {
     position: fixed;
@@ -127,6 +134,7 @@ h4,.h {
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+    
     
     
   }
@@ -139,7 +147,6 @@ h4,.h {
     transition: all 0.3s ease;
     color: white;
     font-size: 18px;
-    border-radius: 100%;
     text-shadow:#000;
     
 }
@@ -151,33 +158,25 @@ h4,.h {
 
 
 
-/* skills are */
-* {box-sizing:border-box}
-
-/* Container for skill bars */
-.container {
-  width: 50%; /* Full width */
-  background-color: white;
-  border-radius: 4px;
-  border-color: grey;
-  height:7px; /* Grey background */
-  margin-bottom: 10px;
-  margin-top:10px;
-
+.skill{
+    background-color:#301934;
 
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' ,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24;
+  color:white;
+  background-color: #702670;
+  border-radius:50%;
+  padding:2px;
+  font-size:46px;
 
-.skills {
-  text-align: right; /*Right-align text */
-  /* padding-top: 10px; Add top padding */
-  /* padding-bottom: 10px; Add bottom padding */
-  color: white; /* White text color */
-  margin-left:-11px;
-  background-color: #A40022;
-  border-radius: 4px;
-  height:7px;
 }
+
 
 .html {width: 65%;} /* Green */
 .css {width: 65%;} /* Blue */
