--- a/design.css
+++ b/design.css
@@ -220,3 +220,12 @@ h4,.h {
     border-color: #702670 ;
     box-shadow: 0 0 0 0.2rem rgba(112, 38, 112, 0.25);
 } 
+
+.accordian-button{
+    color:white;
+    background-color: #702670;
+}
+
+.accordion-button::after {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
+ }
