blog button added

--- a/design.css
+++ b/design.css
@@ -225,6 +225,10 @@ h4,.h {
     color:white;
     background-color: #702670;
 }
+.accordian-button:focus{
+    border-color: #702670 ;
+    box-shadow: 0 0 0 0.2rem rgba(112, 38, 112, 0.25);
+}
 
 .accordion-button::after {
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
